# devordie

./: .gitignore  AI_SETUP_GUIDE.md  AUTH_SETUP.md  CUSTOM_PROMPT_EXAMPLES.md  INTEGRATION_TEST.md  OTP_IMPLEMENTATION_GUIDE.md  README.md  WASM_VERIFICATION.md  docker-compose.yml  schemaoptimization.cpp  setup-mongodb.bat  testsimulationengine.cpp
backend/: .env.example  Dockerfile  EMAIL_SETUP.md  README.md  check-env.js  migrate-existing-users.js  package.json  quick-check.js  test-api.ps1  test-email-service.js  test-gemini.js  test-wasm-direct.cjs  test-wasm-load.js  test-wasm.js
backend/src/: index.js
backend/src/config/: database.js
backend/src/controllers/: simulationController.js  unitController.js
backend/src/data/: defaultStrategies.js
backend/src/middleware/: auth.js
backend/src/middlewares/: auth.js  errorHandler.js  logger.js  validation.js
backend/src/models/: Battle.js  Configuration.js  Simulation.js  Strategy.js  Unit.js  User.js
backend/src/routes/: ai.js  auth.js  authRoutes.js  battle.js  battles.js  config.js  configs.js  simulation.js  strategies.js  unit.js
backend/src/services/: aiCodeGenerator.js  battleAnalysisService.js  battleService.js  emailService.js  engine.js  otpService.js  simulationService.js  unitService.js  wasmEngine.js
backend/tests/: simulation.test.js
backend/wasm/: battle_sim.js  battle_sim.wasm
database/: schema.sql  seed-data.sql
docs/: API-design.md  feature-specs.md  roadmap.md  system-architecture.md
engine/: CMakeLists.txt  README.md  build-test.sh  build-wasm.bat  build-wasm.sh
engine/build-wasm/: .ninja_deps  .ninja_log  build.ninja
engine/include/: API.hpp  BattleEngine.h  Logic.hpp  Map.hpp  SimulationEngine.hpp  Types.hpp  Unit.hpp
engine/src/: API.cpp  BattleEngine.cpp  Logic.cpp  Map.cpp  SimulationEngine.cpp  Unit.cpp  wasm_bindings.cpp
engine/tests/: test_main.cpp
frontend/: index.html  package.json  postcss.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: auth.js  index.js
frontend/src/components/: AICodeGenerator.jsx  Login.jsx  (+16 more)
ml/: devordie.configurations.json  ml_service.py  playstyle_clusters_teamA.csv  playstyle_clusters_teamB.csv  playstyle_profiling.py  teamA_playstyle_model.pkl  teamB_playstyle_model.pkl
ml/data/: devordie.configurations.json
scripts/: build-engine.sh  deploy.sh  run-local.sh
(+48 files in other folders)
